# train-and-track

./: README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yaml
docs/: initial_design.md
