[project]
name = "train-and-track"
version = "0.1.0"
description = "An app to track your workouts, meals, and macros. A CrossFit-inspired fitness and nutrition log built with Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]
